# suture

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml.example  .sutureignore.example  ARCHITECTURE.md  BLOG_ANNOUNCEMENT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.build  LICENSE-COMMERCIAL  LICENSE.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  TESTING_GUIDE.md  VERSION.md  action.yml  architectural_spec.md  deploy.sh  docker-compose.yml  flake.nix  fly.hub.toml  fly.toml  install.sh  justfile  nginx.conf  railway.json  requirements.md  rustfmt.toml
crates/suture-bench/: BENCHMARK_ANALYSIS.md  Cargo.toml
crates/suture-bench/benches/: benchmarks.rs  cas_perf.rs  comprehensive_merge.rs  dag_perf.rs  hub_perf.rs  merge_bench.rs  repo_bench.rs  scale_perf.rs  semantic_merge_perf.rs
crates/suture-bench/src/: lib.rs
crates/suture-cli/: Cargo.toml
crates/suture-cli/src/: display.rs  driver_registry.rs  fuzzy.rs  main.rs  ref_utils.rs  remote_proto.rs  style.rs  util.rs
crates/suture-cli/src/cmd/: add.rs  apply.rs  archive.rs  audit.rs  batch.rs  bisect.rs  blame.rs  branch.rs  checkout.rs  cherry_pick.rs  classification.rs  clean.rs  clone.rs  commit.rs  config.rs  describe.rs  diff.rs  doctor.rs  drivers.rs  export.rs  fetch.rs  fsck.rs  gc.rs  git.rs  grep.rs  hook.rs  hub.rs  ignore.rs  init.rs  key.rs  lfs.rs  log.rs  ls_remote.rs  merge.rs  merge_file.rs  mod.rs  mv.rs  notes.rs  pull.rs  push.rs  (+25 more)
crates/suture-common/: Cargo.toml
crates/suture-common/src/: lib.rs
crates/suture-core/: Cargo.toml
crates/suture-core/proptest-regressions/dag/: graph.txt
crates/suture-core/proptest-regressions/patch/: commute.txt
crates/suture-core/src/: audit.rs  file_type.rs  hooks.rs  integrity.rs  lib.rs  signing.rs
crates/suture-core/src/cas/: compressor.rs  hasher.rs  mod.rs  pack.rs  store.rs
crates/suture-core/src/dag/: branch.rs  graph.rs  merge.rs  mod.rs
crates/suture-core/src/diff/: mod.rs  semantic_formatter.rs
crates/suture-core/src/engine/: apply.rs  diff.rs  merge.rs  mod.rs  tree.rs
crates/suture-core/src/metadata/: global_config.rs  mod.rs  repo_config.rs
crates/suture-core/src/patch/: commute.rs  compose.rs  conflict.rs  merge.rs  mod.rs  types.rs
crates/suture-core/src/repository/: mod.rs  repo_impl.rs
crates/suture-core/tests/: determinism.rs
crates/suture-daemon/: Cargo.toml
crates/suture-daemon/src/: lib.rs  main.rs  mount.rs  shm.rs
crates/suture-driver/: Cargo.toml
crates/suture-driver-csv/: Cargo.toml
crates/suture-driver-csv/proptest-regressions/: lib.txt
crates/suture-driver-csv/src/: lib.rs
crates/suture-driver-docx/: Cargo.toml
crates/suture-driver-docx/src/: lib.rs
crates/suture-driver-example/: Cargo.toml
crates/suture-driver-example/src/: lib.rs
crates/suture-driver-image/: Cargo.toml
crates/suture-driver-image/src/: lib.rs
crates/suture-driver-json/: Cargo.toml
crates/suture-driver-json/src/: lib.rs
crates/suture-driver-markdown/: Cargo.toml
crates/suture-driver-markdown/src/: lib.rs
crates/suture-driver-otio/: Cargo.toml
crates/suture-driver-otio/src/: lib.rs
crates/suture-driver-pdf/: Cargo.toml
crates/suture-driver-pdf/src/: lib.rs
crates/suture-driver-pptx/: Cargo.toml
crates/suture-driver-pptx/src/: lib.rs
crates/suture-driver-properties/: Cargo.toml
crates/suture-driver-properties/src/: lib.rs
crates/suture-driver-svg/: Cargo.toml
crates/suture-driver-svg/src/: lib.rs
crates/suture-driver-xlsx/: Cargo.toml
crates/suture-driver-xlsx/src/: lib.rs
crates/suture-driver-xml/: Cargo.toml
crates/suture-driver-xml/src/: lib.rs
crates/suture-driver-yaml/: Cargo.toml
crates/suture-driver-yaml/src/: lib.rs
crates/suture-driver/src/: cache.rs  error.rs  interner.rs  lib.rs  merge_strategy.rs  plugin.rs  registry.rs  strategy.rs  structured_merge.rs  types.rs  wasm_abi.md
crates/suture-e2e/: Cargo.toml
crates/suture-e2e/src/: lib.rs
crates/suture-e2e/src/fixtures/: docx.rs  image.rs  mod.rs  otio.rs  pdf.rs  pptx.rs  xlsx.rs
crates/suture-e2e/tests/: cli_merge_file.rs  driver_docx_correctness.rs  driver_docx_realistic.rs  driver_image_correctness.rs  driver_image_realistic.rs  driver_otio_correctness.rs  driver_otio_realistic.rs  driver_pdf_correctness.rs  driver_pdf_realistic.rs  driver_pptx_correctness.rs  driver_pptx_realistic.rs  driver_xlsx_correctness.rs  driver_xlsx_realistic.rs  git_merge_driver.rs  merge_driver_json.rs  merge_driver_yaml.rs  platform_merge_api.rs  workflow.rs  workflow_basic.rs  workflow_branches.rs  workflow_conflict.rs  workflow_history.rs  workflow_integrity.rs  workflow_semantic_merge.rs  workflow_stash.rs
crates/suture-fuzz/: Cargo.toml
crates/suture-fuzz/fuzz_targets/: fuzz_classification.rs  fuzz_diff_input.rs  fuzz_hash_parse.rs  fuzz_json_merge.rs  fuzz_patch_deserialize.rs  fuzz_toml_merge.rs  fuzz_yaml_merge.rs
crates/suture-fuzz/proptest-regressions/: lib.txt
crates/suture-fuzz/src/: lib.rs
crates/suture-git-bridge/: Cargo.toml
crates/suture-git-bridge/src/: lib.rs
crates/suture-hub/: Cargo.toml  build.rs
crates/suture-hub/benches/: scale_bench.rs
crates/suture-hub/proto/: suture.proto
crates/suture-hub/src/: async_storage.rs  audit.rs  backup.rs  blob_backend.rs  lib.rs  main.rs  metrics.rs  middleware.rs  raft.rs  raft_network.rs  raft_runtime.rs  server.rs  sso.rs  storage.rs  types.rs  webhooks.rs
crates/suture-hub/static/: app.js  index.html  style.css
crates/suture-lsp/: Cargo.toml
crates/suture-lsp/src/: lib.rs  main.rs
crates/suture-merge/: CHANGELOG.md  Cargo.toml  README.md
crates/suture-merge/src/: error.rs  lib.rs  registry.rs
crates/suture-merge/tests/: full_validation.rs  hardening.rs
crates/suture-node/: Cargo.toml
crates/suture-node/src/: lib.rs
crates/suture-ooxml/: Cargo.toml
crates/suture-ooxml/src/: lib.rs
desktop-app/: Cargo.toml  README.md  build.rs  tauri.conf.json
desktop-app/capabilities/: default.json
desktop-app/src/: main.rs
desktop-app/ui/: index.html
docs/: CNAME  (+81 more)
(+443 files in other folders)
