[workspace]
resolver = "2"
members = [
    "crates/*",
]
exclude = [
    "crates/suture-py",
    "desktop-app",
]

# CWD-dependent tests must run sequentially (set_current_dir is process-global)
[profile.test]
threads = 1

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/WyattAu/suture"
description = "A patch-based version control system with semantic merge and format-aware drivers"
readme = "README.md"
homepage = "https://github.com/WyattAu/suture"
categories = ["development-tools"]
keywords = ["vcs", "version-control", "patch", "semantic-merge", "dvcs"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
