[workspace]
resolver = "2"
members = [
    "crates/*",
]
exclude = [
    "desktop-app",
]

# Note: CWD-dependent tests in suture-cli use a mutex guard.
# CI should use: cargo test -- --test-threads=1

[workspace.package]
license = "AGPL-3.0-or-later"
repository = "https://github.com/WyattAu/suture"
description = "A patch-based version control system with semantic merge and format-aware drivers"
readme = "README.md"
homepage = "https://github.com/WyattAu/suture"
categories = ["development-tools"]
keywords = ["vcs", "version-control", "patch", "semantic-merge", "dvcs"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
