[package]
name = "suture-desktop"
version = "1.2.0"
edition = "2021"
description = "Suture USVCS Desktop Application (Tauri)"
license = "Apache-2.0"
repository = "https://github.com/WyattAu/suture"
readme = "README.md"
keywords = ["vcs", "version-control", "suture", "desktop", "tauri"]
categories = ["development-tools"]

[dependencies]
suture-core = { version = "1.1.0", path = "../crates/suture-core" }
suture-common = { version = "1.1.0", path = "../crates/suture-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", optional = true }

[features]
default = []
tauri = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:tauri-plugin-fs"]

[[bin]]
name = "suture-desktop"
path = "src/main.rs"
required-features = ["tauri"]
