[package]
name = "suture-desktop"
version = "5.1.0"
edition = "2024"
description = "Suture USVCS Desktop Application (Tauri)"
license = "Apache-2.0"
repository = "https://github.com/WyattAu/suture"
readme = "README.md"
keywords = ["vcs", "version-control", "suture", "desktop", "tauri"]
categories = ["development-tools"]

[dependencies]
suture-core = { version = "5.0.0", path = "../crates/suture-core" }
suture-common = { version = "5.0.0", path = "../crates/suture-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", optional = true, features = ["tray-icon"] }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true }

[features]
default = []
tauri = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:tauri-plugin-fs", "dep:reqwest"]

[[bin]]
name = "suture-desktop"
path = "src/main.rs"
required-features = ["tauri"]
