[package]
name = "suture-bench"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
suture-core = { path = "../suture-core" }
suture-common = { path = "../suture-common" }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false
