[package]
name = "suture-bench"
version = "5.0.1"
edition = "2024"
publish = false

[dependencies]
suture-core = { path = "../suture-core" }
suture-common = { path = "../suture-common" }
suture-protocol = { path = "../suture-protocol" }
suture-driver = { path = "../suture-driver" }
suture-driver-json = { path = "../suture-driver-json" }
suture-driver-yaml = { path = "../suture-driver-yaml" }
suture-driver-toml = { path = "../suture-driver-toml" }
suture-driver-csv = { path = "../suture-driver-csv" }
suture-hub = { path = "../suture-hub" }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "dag_perf"
harness = false

[[bench]]
name = "semantic_merge_perf"
harness = false

[[bench]]
name = "cas_perf"
harness = false

[[bench]]
name = "hub_perf"
harness = false

[[bench]]
name = "repo_bench"
harness = false

[[bench]]
name = "merge_bench"
harness = false
