[package]
name = "suture-cli"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "suture"
path = "src/main.rs"

[dependencies]
suture-core = { path = "../suture-core" }
suture-common = { path = "../suture-common" }
suture-driver = { path = "../suture-driver" }
suture-driver-json = { path = "../suture-driver-json" }
suture-driver-toml = { path = "../suture-driver-toml" }
suture-driver-csv = { path = "../suture-driver-csv" }
suture-driver-yaml = { path = "../suture-driver-yaml" }
suture-driver-xml = { path = "../suture-driver-xml" }
suture-ooxml = { path = "../suture-ooxml" }
suture-driver-docx = { path = "../suture-driver-docx" }
suture-driver-xlsx = { path = "../suture-driver-xlsx" }
suture-driver-pptx = { path = "../suture-driver-pptx" }
suture-tui = { path = "../suture-tui" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"
