[package]
name = "suture-cli"
version = "0.8.0"
edition = "2024"
description = "A patch-based version control system with semantic merge for structured files"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[[bin]]
name = "suture"
path = "src/main.rs"

[dependencies]
suture-core = { path = "../suture-core", version = "0.8.0" }
suture-common = { path = "../suture-common", version = "0.8.0" }
suture-protocol = { path = "../suture-protocol", version = "0.8.0" }
suture-driver = { path = "../suture-driver", version = "0.8.0" }
suture-driver-json = { path = "../suture-driver-json", version = "0.8.0" }
suture-driver-toml = { path = "../suture-driver-toml", version = "0.8.0" }
suture-driver-csv = { path = "../suture-driver-csv", version = "0.8.0" }
suture-driver-yaml = { path = "../suture-driver-yaml", version = "0.8.0" }
suture-driver-xml = { path = "../suture-driver-xml", version = "0.8.0" }
suture-ooxml = { path = "../suture-ooxml", version = "0.8.0" }
suture-driver-docx = { path = "../suture-driver-docx", version = "0.8.0" }
suture-driver-xlsx = { path = "../suture-driver-xlsx", version = "0.8.0" }
suture-driver-pptx = { path = "../suture-driver-pptx", version = "0.8.0" }
suture-driver-markdown = { path = "../suture-driver-markdown", version = "0.8.0" }
suture-tui = { path = "../suture-tui", version = "0.12.0" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"
