[package]
name = "suture-cli"
version = "5.3.1"
edition = "2024"
description = "A patch-based version control system with semantic merge for structured files"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[[bin]]
name = "suture"
path = "src/main.rs"

[dependencies]
suture-core = { path = "../suture-core", version = "5.0.0" }
suture-common = { path = "../suture-common", version = "5.0.0" }
suture-protocol = { path = "../suture-protocol", version = "5.0.0" }
suture-driver = { path = "../suture-driver", version = "5.0.0" }
suture-driver-json = { path = "../suture-driver-json", version = "5.0.0" }
suture-driver-toml = { path = "../suture-driver-toml", version = "5.0.0" }
suture-driver-csv = { path = "../suture-driver-csv", version = "5.0.0" }
suture-driver-yaml = { path = "../suture-driver-yaml", version = "5.0.0" }
suture-driver-xml = { path = "../suture-driver-xml", version = "5.0.0" }
suture-driver-svg = { path = "../suture-driver-svg", version = "5.0.0" }
suture-ooxml = { path = "../suture-ooxml", version = "5.0.0" }
suture-driver-docx = { path = "../suture-driver-docx", version = "5.0.0" }
suture-driver-xlsx = { path = "../suture-driver-xlsx", version = "5.0.0" }
suture-driver-pptx = { path = "../suture-driver-pptx", version = "5.0.0" }
suture-driver-markdown = { path = "../suture-driver-markdown", version = "5.0.0" }
suture-driver-sql = { path = "../suture-driver-sql", version = "5.0.0" }
suture-driver-image = { path = "../suture-driver-image", version = "5.0.0" }
suture-driver-pdf = { path = "../suture-driver-pdf", version = "5.0.0" }
suture-driver-html = { path = "../suture-driver-html", version = "5.0.0" }
suture-driver-ical = { path = "../suture-driver-ical", version = "5.0.0" }
suture-driver-feed = { path = "../suture-driver-feed", version = "5.0.0" }
suture-driver-otio = { path = "../suture-driver-otio", version = "5.0.0" }
suture-hub = { path = "../suture-hub", version = "5.0.0" }
suture-tui = { path = "../suture-tui", version = "5.0.0" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
toml = "0.8"
libc = "0.2"
regex = "1"
chrono = "0.4"
# suture-node is excluded from publish (requires Node.js/napi-rs).
# Uncomment the line below and the 'node' feature to build with Node.js support:
# suture-node = { path = "../suture-node", optional = true }

flate2 = "1"
tar = "0.4"
difflib = "0.4"
walkdir = "2"

[features]
# 'node' feature temporarily removed for crates.io publish (suture-node is publish=false)
# node = ["dep:suture-node"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"
