[package]
name = "suture-common"
version = "5.0.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
blake3 = "1.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
