[package]
name = "suture-core"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.3"
flatbuffers = "25.12.19"
prost = "0.14.3"
prost-types = "0.14.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tonic = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
