[package]
name = "suture-core"
version = "0.1.0"
edition = "2024"

[dependencies]
suture-common = { path = "../suture-common" }
blake3 = "1.8"
zstd = "0.13"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.20"
proptest = "1.6"

[features]
default = []
