[package]
name = "suture-core"
version = "0.8.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
suture-common = { path = "../suture-common", version = "0.8.0" }
blake3 = "1.8"
zstd = "0.13"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
toml = "0.8"
dirs = "6"
rayon = "1.10"
tempfile = "3"

[dev-dependencies]
proptest = "1.6"

[features]
default = []
