[package]
name = "suture-daemon"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Suture background daemon for file watching and automatic sync"
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-core = { path = "../suture-core", version = "0.10.0" }
suture-common = { path = "../suture-common", version = "0.10.0" }
suture-protocol = { path = "../suture-protocol", version = "0.10.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
