[package]
name = "suture-driver-csv"
version = "1.0.0-rc.1"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "1.0.0-rc.1" }
csv = "1.3"
