[package]
name = "suture-driver-docx"
version = "0.6.0"
edition = "2024"

[dependencies]
suture-driver = { path = "../suture-driver" }
suture-ooxml = { path = "../suture-ooxml" }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2.2", default-features = false }
