[package]
name = "suture-driver-docx"
version = "0.9.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "0.9.0" }
suture-ooxml = { path = "../suture-ooxml", version = "0.9.0" }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2.2", default-features = false }
