[package]
name = "suture-driver-docx"
version = "5.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "5.0.0" }
suture-ooxml = { path = "../suture-ooxml", version = "5.0.0" }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2.2", default-features = false }
