[package]
name = "suture-driver-example"
version = "1.0.0-rc.1"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Example Suture driver demonstrating the driver SDK"
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "1.0.0-rc.1" }
suture-common = { path = "../suture-common", version = "1.0.0-rc.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
