[package]
name = "suture-driver-example"
version = "1.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Example Suture driver demonstrating the driver SDK"
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "1.1.0" }
suture-common = { path = "../suture-common", version = "1.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
