[package]
name = "suture-driver-example"
version = "5.0.1"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Example Suture driver demonstrating the driver SDK"
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "5.0.0" }
suture-common = { path = "../suture-common", version = "5.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
