[package]
name = "suture-driver-otio"
version = "1.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "1.1.0" }
suture-core = { path = "../suture-core", version = "1.1.0" }
suture-common = { path = "../suture-common", version = "1.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
