[package]
name = "suture-driver-pdf"
version = "1.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "1.1.0" }
lopdf = "0.34"
