[package]
name = "suture-driver-properties"
version = "5.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Suture driver for Java .properties files (key=value with # comments)"
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "5.0.0" }
suture-common = { path = "../suture-common", version = "5.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
