[package]
name = "suture-driver-svg"
version = "5.0.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "5.0.0" }
roxmltree = "0.21"
