[package]
name = "suture-driver-xml"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "0.10.0" }
roxmltree = "0.21"
