[package]
name = "suture-driver-yaml"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-driver = { path = "../suture-driver", version = "0.10.0" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
