[package]
name = "suture-driver"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-core = { path = "../suture-core", version = "0.10.0" }
suture-common = { path = "../suture-common", version = "0.10.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasmtime = { version = "28", optional = true }

[features]
default = []
wasm-plugins = ["dep:wasmtime"]
