[package]
name = "suture-driver"
version = "1.0.0-rc.1"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
suture-core = { path = "../suture-core", version = "1.0.0-rc.1" }
suture-common = { path = "../suture-common", version = "1.0.0-rc.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasmtime = { version = "22", optional = true }

[features]
default = []
wasm-plugins = ["dep:wasmtime"]
