[package]
name = "suture-e2e"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
tempfile = "3"

[dev-dependencies]
suture-hub = { path = "../suture-hub" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
