[package]
name = "suture-fuzz"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
suture-core = { path = "../suture-core" }
suture-common = { path = "../suture-common" }
suture-driver-json = { path = "../suture-driver-json" }
suture-driver = { path = "../suture-driver" }
serde_json = "1"
proptest = "1.6"
