[package]
name = "suture-git-bridge"
version = "0.8.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
suture-core = { path = "../suture-core", version = "0.8.0" }
suture-common = { path = "../suture-common", version = "0.8.0" }
thiserror = "2"
tracing = "0.1"
