[package]
name = "suture-hub"
version = "0.8.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
suture-common = { path = "../suture-common", version = "0.8.0" }
suture-core = { path = "../suture-core", version = "0.8.0" }
suture-protocol = { path = "../suture-protocol", version = "0.8.0" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
base64 = "0.22"
rusqlite = { version = "0.39", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"

[dev-dependencies]
tempfile = "3"
