[package]
name = "suture-hub"
version = "5.3.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
suture-common = { path = "../suture-common", version = "5.0.0" }
suture-core = { path = "../suture-core", version = "5.0.0" }
suture-protocol = { path = "../suture-protocol", version = "5.0.0" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
base64 = "0.22"
rusqlite = { version = "0.39", features = ["bundled", "backup"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
bytes = "1"
zstd = "0.13"
url = "2"
tonic = "0.13"
prost = "0.13"
suture-raft = { path = "../suture-raft", version = "5.0.0", optional = true }
suture-s3 = { path = "../suture-s3", version = "5.0.0", optional = true }
async-trait = { version = "0.1", optional = true }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["request-id"] }
chrono = "0.4"

[dev-dependencies]
blake3 = "1"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "scale_bench"
harness = false

[build-dependencies]
tonic-build = "0.13"

[features]
default = []
raft-cluster = ["dep:suture-raft"]
s3-backend = ["dep:suture-s3", "dep:async-trait"]
