[package]
name = "suture-lsp"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "suture-lsp"
path = "src/main.rs"

[dependencies]
suture-core = { path = "../suture-core" }
suture-common = { path = "../suture-common" }
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
