[package]
name = "suture-lsp"
version = "5.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
categories.workspace = true

[[bin]]
name = "suture-lsp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
suture-core = { path = "../suture-core", version = "5.0.0" }
suture-common = { path = "../suture-common", version = "5.0.0" }
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
serde = "1"
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
