[package]
name = "suture-merge"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Dead-simple semantic merge for structured files. Merge JSON, YAML, TOML, CSV, XML, Markdown, SVG, HTML, iCalendar, and RSS/Atom feeds."
homepage.workspace = true
keywords = ["merge", "semantic-merge", "json", "yaml", "three-way-merge"]
readme = "README.md"
categories = ["text-processing", "config"]

[dependencies]
suture-driver = { path = "../suture-driver", version = "1.2.0" }
suture-driver-json = { path = "../suture-driver-json", version = "1.2.0", optional = true }
suture-driver-yaml = { path = "../suture-driver-yaml", version = "1.2.0", optional = true }
suture-driver-toml = { path = "../suture-driver-toml", version = "1.2.0", optional = true }
suture-driver-csv = { path = "../suture-driver-csv", version = "1.2.0", optional = true }
suture-driver-xml = { path = "../suture-driver-xml", version = "1.2.0", optional = true }
suture-driver-markdown = { path = "../suture-driver-markdown", version = "1.2.0", optional = true }
suture-driver-svg = { path = "../suture-driver-svg", version = "1.2.0", optional = true }
suture-driver-html = { path = "../suture-driver-html", version = "1.2.0", optional = true }
suture-driver-ical = { path = "../suture-driver-ical", version = "1.2.0", optional = true }
suture-driver-feed = { path = "../suture-driver-feed", version = "1.2.0", optional = true }

[features]
default = ["json", "yaml", "toml", "csv"]
json = ["dep:suture-driver-json"]
yaml = ["dep:suture-driver-yaml"]
toml = ["dep:suture-driver-toml"]
csv = ["dep:suture-driver-csv"]
xml = ["dep:suture-driver-xml"]
markdown = ["dep:suture-driver-markdown"]
svg = ["dep:suture-driver-svg"]
html = ["dep:suture-driver-html"]
ical = ["dep:suture-driver-ical"]
feed = ["dep:suture-driver-feed"]
all = ["json", "yaml", "toml", "csv", "xml", "markdown", "svg", "html", "ical", "feed"]
